--- a/_posts/2019-06-02-document.md
+++ b/_posts/2019-06-02-document.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "【旧文搬运】从《第一次遇见花香的那刻》我想到些什么"
-date:   2023-03-30
+title: "【旧文搬运!】从《第一次遇见花香的那刻》我想到些什么"
+date:   2019-06-12
 tags: [随笔]
 comments: true
 author: tianyi
