--- a/_posts/2019-06-03-document.md
+++ b/_posts/2019-06-03-document.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "【旧文搬运】“并非每一种痛苦都能感同身受”--《难以置信》剧评"
-date:   2023-03-31
+title: "【旧文搬运!】“并非每一种痛苦都能感同身受”--《难以置信》剧评"
+date:   2019-06-03
 tags: [随笔]
 comments: true
 author: tianyi
