--- a/_posts/2023-12-12-BooksComment2023.md
+++ b/_posts/2023-12-12-BooksComment2023.md
@@ -11,7 +11,7 @@ author: tianyi
 
 【最佳图书】[卡拉马佐夫兄弟](https://book.douban.com/subject/25887924/)
 
-【最佳小说】[太古和其他的时间]（https://book.douban.com/subject/27132345/）
+【最佳小说】[太古和其他的时间](https://book.douban.com/subject/27132345/)
 
 【最佳杂文】[一只特立独行的猪](https://book.douban.com/subject/34950797/)
 
